<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result_dialog_fragment_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/result_dialog_fragment_margin"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/result_dialog_fragment_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Ваш результат : " />

    <TextView
        android:id="@+id/result_dialog_fragment_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/result_dialog_fragment_margin"
        android:gravity="center"
        android:text="@string/results_dialog_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_dialog_fragment_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result_dialog_fragment_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/result_dialog_fragment_margin"
        android:ems="10"
        android:hint="@string/result_dialog_edittext_hint"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/result_dialog_fragment_button_ok"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Name" />

    <Button
        android:id="@+id/result_dialog_fragment_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/result_dialog_fragment_margin"
        android:text="@string/result_dialog_fragment_button_ok_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>